# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header:  $

  21 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elisp-common.eclass:
  added a comment when the site-start generation hints reveal nearly no output

  21 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elisp-common.eclass:
  added hint why has_version is not needed in connection with
  elisp-site-regen() and pkg_postrm

  20 Jun 2007; Ulrich Mueller <ulm@gentoo.org> elisp.eclass,
  elisp-common.eclass:
  Generate output in elisp-site-regen only if site-gentoo.el has changed.

  20 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass:
  add --silent option to elisp_pkg_postrm()

  20 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elisp-common.eclass:
  applied changes for a silent option for elisp-site-regen()

  12 Jun 2007; Ulrich Mueller <ulm@gentoo.org> elisp.eclass:
  Add more explanations to error message. Function elisp_pkg_setup moved down
  to proper place.

  12 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass:
  remove an uncessary test

  11 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass:
  set free the ghosts of the NEED_EMACS depending scheme, for the new-style
  Emacs virtuals

  04 Jun 2007; Ulrich Mueller <ulm@gentoo.org> elisp.eclass,
  elisp-common.eclass:
  New function elisp-emacs-version, works for all known Emacs versions.
  Use versionator.eclass for comparison of versions.

  04 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass,
  elisp-common.eclass:
  added a comment about elisp-emacs-major-version() in the documentation;
  documented NEED_EMACS a bit, added some more comments

  04 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass:
  export pkg_setup function; uncomment parts of it and add some checks and
  output for testing

  01 Jun 2007; Ulrich Mueller <ulm@gentoo.org> elisp.eclass:
  Depend on >=virtual/emacs-${VERSION} since this is what we later ask for.
